--- a/static/style.css
+++ b/static/style.css
@@ -1,36 +1,32 @@
 body
 {
-	padding-top: 60px;
-
-	/* IE10 Consumer Preview */ 
-	background-image: -ms-radial-gradient(right center, circle farthest-corner, #FFFFFF 0%, #CCCCCC 100%);
-
-	/* Mozilla Firefox */ 
-	background-image: -moz-radial-gradient(right center, circle farthest-corner, #FFFFFF 0%, #CCCCCC 100%);
-
-	/* Opera */ 
-	background-image: -o-radial-gradient(right center, circle farthest-corner, #FFFFFF 0%, #CCCCCC 100%);
-
-	/* Webkit (Safari/Chrome 10) */ 
-	background-image: -webkit-gradient(radial, right center, 0, right center, 964, color-stop(0, #FFFFFF), color-stop(1, #CCCCCC));
-
-	/* Webkit (Chrome 11+) */ 
-	background-image: -webkit-radial-gradient(right center, circle farthest-corner, #FFFFFF 0%, #CCCCCC 100%);
-
-	/* W3C Markup, IE10 Release Preview */ 
-	background-image: radial-gradient(circle farthest-corner at right center, #FFFFFF 0%, #CCCCCC 100%);
+	background-color: black;
+	font-family: 'Muli', sans-serif;
+	font-size: 9pt;
+	letter-spacing: 6px;
+	color: white;
 }
 
 .logo
 {
-	padding-top: 10px;
+	margin-bottom: 10px;
+}
+
+.container{
+	padding: 60px 0px;
+}
+
+.row .moviethumb{
+	margin: 10px 0px;
+}
+
+.img-polaroid {
+	padding: 0px;
+	border: 1px solid grey;
 }
 
 iframe
 {
-	background: #eee url("darkgrain.png");
-	padding: 12px 16px 12px 16px;
-	border-radius: 6px;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
+	padding: 0px;
+	/*border: 1px solid grey;*/
 }
