--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-	padding: 60px 0px;
+	padding: 30px 0px;
 }
 
 iframe {
@@ -19,22 +19,43 @@ iframe {
 	/*border: 1px solid grey;*/
 }
 
-.row .movie {
+.movie {
 	margin: 10px 0px;
 }
 
-.moviethumb img {
+.moviethumb {
+	height: 281px;
+	width: 500px;
 	padding: 0px;
 	border: 1px solid grey;
 }
 
-.moviethumb img:hover, .moviethumb img:focus {
+.moviethumb:hover, .moviethumb:focus {
 	border-color: white;
 }
 
 .movielabel {
 	height: 40px;
 }
-.movielabel p {
-	display: none;
+
+#movieplayer {
+	display: :none;
+}
+
+.modal {
+	background-color: black;
+}
+
+.underbox {
+	position: absolute;
+	bottom:0;
+	height: 132px;
+	width: 228px;
+	background-position: 0 0;
+	cursor: pointer;
+	background-color: #000;
+}
+
+.underbox:hover {
+	background-position: -500px 0 !important;
 }
