--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: black;
-	font-family: 'Muli', sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	font-size: 7pt;
 	letter-spacing: 3px;
 	color: white;
@@ -16,27 +16,70 @@ body {
 
 iframe {
 	padding: 0px;
-	/*border: 1px solid grey;*/
 }
 
 .movies td {
 	padding: 10px;
 }
 
-.moviethumb {
-	padding: 0px;
-	border: 1px solid grey;
-	
+#movieplayer {
+	display: :none;
 }
 
-.moviethumb:hover, .moviethumb:focus {
+.movie {
+    position: relative;
+    overflow: hidden;
+	padding: 0px;
+	border: 1px solid grey;
+}
+
+.movie:hover, .movie:focus {
 	border-color: white;
 }
 
-.movielabel {
-	height: 40px;
+.movie:hover img {
+	-webkit-filter: brightness(30%);
+	-moz-filter: brightness(30%);
+	filter: brightness(30%);
 }
 
-#movieplayer {
-	display: :none;
+.movielabel {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+	-webkit-transition: opacity 100ms linear;
+	-moz-transition: opacity 100ms linear;
+	transition: opacity 100ms linear;
+}
+
+.movielabel:hover {
+	opacity: 1;
+	-webkit-transition-delay: 200ms;
+	-moz-transition-delay: 200ms;
+	transition-delay: 200ms;
+}
+
+.movielabel h1 {
+	font-size: 2em;
+	font-weight: 200;
+	color: #fff;
+	position: absolute;
+	top: 15%;
+	width: 100%;
+	text-align: center;
+	text-decoration: underline;
+}
+
+.movielabel p {
+	font-size: 3em;
+	font-weight: 200;
+	line-height: 1;
+	color: #fff;
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	text-align: center;
 }
