--- a/css/balthazarhertel.css
+++ b/css/balthazarhertel.css
@@ -22,6 +22,11 @@ iframe {
 	padding: 0px;
 }
 
+.movierow {
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
 .movies td {
 	padding: 10px;
 }
@@ -90,18 +95,30 @@ iframe {
 
 .test {
 	display: none;
+}
+
+#navn {
 	font-size: 3.7vw;
 	font-weight: 200;
 	margin-bottom: 10px;
 }
 
-.test #titel {
+#titel {
 	font-size: 2.1vw;
 	text-decoration: underline;
 	/*font-variant: small-caps;*/
 	margin-right: 17px;
 	vertical-align: super;
 	letter-spacing: 1px;
+}
+
+#credits {
+	text-align: center;
+	font-size: 1.0vw;
+	font-weight: 100;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	color: grey;
 }
 
 .incognito {
